--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://github.com/Abdulrahman-Bugis/Library-Management-System",
   "name": "library-management-system",
   "version": "0.1.0",
   "private": true,
@@ -46,7 +47,7 @@
   },
   "devDependencies": {
     "gh-pages": "^6.3.0"
-  },
-  "homepage": "https://github.com/Abdulrahman-Bugis/Library-Management-System"
+  }
+  
 
 }
