--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/Abdulrahman-Bugis/Library-Management-System",
+  "homepage": "https://Abdulrahman-Bugis.github.io/Library-Management-System",
   "name": "library-management-system",
   "version": "0.1.0",
   "private": true,
